<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="radius">Radius</string>
    <string name="minimum_cities_title">Places Amount</string>
    <string name="radius_title">Search Radius</string>
    
    <string name="max_cities">Maximum Cities Amount</string>
    <string name="current_radius">Current Radius</string>
    
    <string name="minimumcities">Places Amount</string>
    
    <string name="app_name">RouteAdvisor</string>
    <string name="api_key">AIzaSyB8weBxEzezhX4ZFqOGcgcGwMkPqiFdTik</string>
    <string name="server_key">AIzaSyBKJD8p-cFipXucUy3XyDRXePkJhvRaI2Q</string>
    
    <string name="hello">Hello World, PhotoIntentActivity!</string>
    
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    
    <string name="app_tag">LocationUpdates</string>
    <string name="app_description">
        Displays current address and current or updated location using Location Services
    </string>

    <!-- User interface labels and strings -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
    
    <string-array name="drawer_array">
        <item>Satellite</item>
        <item>Clear</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="settings">Settings</string>
    <string name="about">About</string>
    
    <string name="places_title">Places</string>
    
    <!-- my strings -->
    
    <string name="login">Login</string>
    <string name="pass">pass</string>
    <string name="loginButton">Sign in</string>
    
    <string name="search_city">Draw Route</string>
    <string name="search_places">Choose Places Types</string>
    <string name="search_cities">Search Places</string>
    
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="places_types_title">Places Types</string>
    
    <string-array name="colors_array">
        <item>#B0171F</item>
        <item>#DC143C</item>
        <item>#FFAEB9</item>
        <item>#8B5F65</item>
        <item>#BA55D3</item>
        <item>#9932CC</item>
        <item>#4B0082</item>
        <item>#551A8B</item>
        <item>#8470FF</item>
        <item>#473C8B</item>
        <item>#0000FF</item>
        <item>#27408B</item>
        <item>#CAE1FF</item>
        <item>#1874CD</item>
        <item>#00FFFF</item>
        <item>#00FF7F</item>
        <item>#00CD66</item>
        <item>#00CD00</item>
        <item>#EEEE00</item>
        <item>#FF8C00</item>
        <item>#FF4500</item>
        <item>#7171C6</item>
        <item>#C67171</item>
        <item>#FF00FF</item>
        <item>#473C8B</item>
        <item>#6495ED</item>
        <item>#7AC5CD</item>
    </string-array>
    
    <string-array name="hue_colors_array">
        <item>240.0</item>
        <item>180.0</item>
        <item>120.0</item>
        <item>300.0</item>
        <item>30.0</item>
        <item>0.0</item>
        <item>330.0</item>
        <item>270.0</item>
        <item>60.0</item>
    </string-array>
    
    <string-array name="places_types">
		<item>accounting</item>
		<item>airport</item>
		<item>amusement_park</item>
		<item>aquarium</item>
		<item>art_gallery</item>
		<item>atm</item>
		<item>bakery</item>
		<item>bank</item>
		<item>bar</item>
		<item>beauty_salon</item>
		<item>bicycle_store</item>
		<item>book_store</item>
		<item>bowling_alley</item>
		<item>bus_station</item>
		<item>cafe</item>
		<item>campground</item>
		<item>car_dealer</item>
		<item>car_rental</item>
		<item>car_repair</item>
		<item>car_wash</item>
		<item>casino</item>
		<item>cemetery</item>
		<item>church</item>
		<item>city_hall</item>
		<item>clothing_store</item>
		<item>convenience_store</item>
		<item>courthouse</item>
		<item>dentist</item>
		<item>department_store</item>
		<item>doctor</item>
		<item>electrician</item>
		<item>electronics_store</item>
		<item>embassy</item>
		<item>establishment</item>
		<item>finance</item>
		<item>fire_station</item>
		<item>florist</item>
		<item>food</item>
		<item>funeral_home</item>
		<item>furniture_store</item>
		<item>gas_station</item>
		<item>general_contractor</item>
		<item>grocery_or_supermarket</item>
		<item>gym</item>
		<item>hair_care</item>
		<item>hardware_store</item>
		<item>health</item>
		<item>hindu_temple</item>
		<item>home_goods_store</item>
		<item>hospital</item>
		<item>insurance_agency</item>
		<item>jewelry_store</item>
		<item>laundry</item>
		<item>lawyer</item>
		<item>library</item>
		<item>liquor_store</item>
		<item>local_government_office</item>
		<item>locksmith</item>
		<item>lodging</item>
		<item>meal_delivery</item>
		<item>meal_takeaway</item>
		<item>mosque</item>
		<item>movie_rental</item>
		<item>movie_theater</item>
		<item>moving_company</item>
		<item>museum</item>
		<item>night_club</item>
		<item>painter</item>
		<item>park</item>
		<item>parking</item>
		<item>pet_store</item>
		<item>pharmacy</item>
		<item>physiotherapist</item>
		<item>place_of_worship</item>
		<item>plumber</item>
		<item>police</item>
		<item>post_office</item>
		<item>real_estate_agency</item>
		<item>restaurant</item>
		<item>roofing_contractor</item>
		<item>rv_park</item>
		<item>school</item>
		<item>shoe_store</item>
		<item>shopping_mall</item>
		<item>spa</item>
		<item>stadium</item>
		<item>storage</item>
		<item>store</item>
		<item>subway_station</item>
		<item>synagogue</item>
		<item>taxi_stand</item>
		<item>train_station</item>
		<item>travel_agency</item>
		<item>university</item>
		<item>veterinary_care</item>
		<item>zoo</item>
    </string-array>
    
</resources>






