<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:id="@+id/leftLinearLayout"
            android:orientation="vertical">
    </LinearLayout>
    
    <LinearLayout
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
   	  android:layout_marginTop="40dp">

    <EditText android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"/>
          
   	<EditText android:id="@+id/pass"
   	      android:layout_width="match_parent"
   	      android:layout_height="wrap_content"
   	      android:hint="@string/pass"
   	      android:inputType="textPassword"
   	      android:layout_marginTop="2dp"
                   android:layout_marginBottom="2dp"/>
 	      
   	<Button android:id="@+id/loginButton"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/loginButton" 
           android:layout_marginTop="2dp"
           android:layout_marginBottom="2dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:id="@+id/rightLinearLayout"
            android:orientation="vertical">
    </LinearLayout>
</LinearLayout>

